--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,5 +1,7 @@
 #header-id {
     overflow: hidden;
+    position: relative;
+    z-index: -1;
 }
 
 .header-slideshow,
@@ -8,7 +10,7 @@
     width: 100%;
     height: 800px;
     top: 0;
-    z-index: 0;
+    z-index: -1;
     padding: 0;
     display: flex;
     margin-bottom: 0;
@@ -32,23 +34,26 @@
     background-position: 50% 50%;
     background-repeat: none;
     opacity: 0;
-    z-index: 0;
+    z-index: -1;
     animation: imageAnimation 30s linear infinite 0s;
 }
 
 .header-slideshow li:nth-child(1) span {
     background-image: url(../../assets/imgHome/capaVideoooooDrone.png);
     background-size: cover;
+    z-index: -1;
 }
 .header-slideshow li:nth-child(2) span {
     background-image: url(../../assets/imgHome/capaPicoDoItaguare_FotoGabrielTarso.jpg);
     background-size: cover;
     animation-delay: 10s;
+    z-index: -1;
 }
 .header-slideshow li:nth-child(3) span {
     background-image: url(../../assets/imgHome/capaBarracaNoite.jpg);
     background-size: cover;
     animation-delay: 20s;
+    z-index: -1;
 }
 .header-slideshow li:nth-child(2) div {
     animation-delay: 10s;
@@ -77,6 +82,7 @@
         background-repeat: no-repeat;
         width: 100%;
         height: 400px;
+        z-index: -1;
     }
 
     .header-slideshow li span {
@@ -84,21 +90,25 @@
         background-repeat: no-repeat;
         width: 100%;
         height: 400px;
+        z-index: -1;
     }
 
     .header-slideshow li:nth-child(1) span {
         background-size: cover;
         background-repeat: no-repeat;
+        z-index: -1;
     }
 
     .header-slideshow li:nth-child(2) span {
         background-size: cover;
         background-repeat: no-repeat;
+        z-index: -1;
     }
 
     .header-slideshow li:nth-child(3) span {
         background-size: cover;
         background-repeat: no-repeat;
+        z-index: -1;
     }
 }
 
