--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,7 +1,6 @@
 #header-id {
     overflow: hidden;
     position: relative;
-    z-index: -1;
 }
 
 .header-slideshow,
@@ -10,7 +9,6 @@
     width: 100%;
     height: 800px;
     top: 0;
-    z-index: -1;
     padding: 0;
     display: flex;
     margin-bottom: 0;
@@ -34,26 +32,22 @@
     background-position: 50% 50%;
     background-repeat: none;
     opacity: 0;
-    z-index: -1;
     animation: imageAnimation 30s linear infinite 0s;
 }
 
 .header-slideshow li:nth-child(1) span {
     background-image: url(../../assets/imgHome/capaVideoooooDrone.png);
     background-size: cover;
-    z-index: -1;
 }
 .header-slideshow li:nth-child(2) span {
     background-image: url(../../assets/imgHome/capaPicoDoItaguare_FotoGabrielTarso.jpg);
     background-size: cover;
     animation-delay: 10s;
-    z-index: -1;
 }
 .header-slideshow li:nth-child(3) span {
     background-image: url(../../assets/imgHome/capaBarracaNoite.jpg);
     background-size: cover;
     animation-delay: 20s;
-    z-index: -1;
 }
 .header-slideshow li:nth-child(2) div {
     animation-delay: 10s;
@@ -74,7 +68,7 @@
     opacity: 1;
 }
 
-@media(max-width: 399px) {
+@media(max-width: 480px), handheld and (orientation: landscape) {
 
     .header-slideshow,
     .header-slideshow:after {
@@ -82,7 +76,6 @@
         background-repeat: no-repeat;
         width: 100%;
         height: 400px;
-        z-index: -1;
     }
 
     .header-slideshow li span {
@@ -90,25 +83,21 @@
         background-repeat: no-repeat;
         width: 100%;
         height: 400px;
-        z-index: -1;
     }
 
     .header-slideshow li:nth-child(1) span {
         background-size: cover;
         background-repeat: no-repeat;
-        z-index: -1;
     }
 
     .header-slideshow li:nth-child(2) span {
         background-size: cover;
         background-repeat: no-repeat;
-        z-index: -1;
     }
 
     .header-slideshow li:nth-child(3) span {
         background-size: cover;
         background-repeat: no-repeat;
-        z-index: -1;
     }
 }
 
